[project]
name = "llamawhisper"
version = "0.1.0"
description = "GUI for managing whisper.cpp and llama.cpp installations"
requires-python = ">=3.8"
dependencies = [
    "pyannote.audio>=3.1",
    "torch>=2.0",
    "torchaudio>=2.0",
    "static-ffmpeg>=2.5",
    "soundfile>=0.12",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]
